ipq806x: trick mbncat into compliance
The fake binaries *.mbn need an 8 byte header
d1 dc 4b 84 34 10 d7 73 for mbncat.py to accept them.

Add all files that will be needed for IPQ806x builds
down the line.

This will still not produce a working coreboot binary, but
it will fix compilation of coreboot.

Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

Change-Id: I8cbb45eeb559f673deeefbf7692aff6b0211e59f

--- a/cpu/qualcomm/ipq806x/README
+++ b/cpu/qualcomm/ipq806x/README
@@ -1,8 +1,8 @@
 *******************************************************************************
-* ATTENTION: The blobs/cpu/qualcomm/ipq806x/uber-sbl.mbn file is a placeholder.
-* It is NOT a working IPQ806x binary.
+* ATTENTION: The MBN files in cpu/qualcomm/ipq806x/*.mbn are placeholders.
+* These are NOT working IPQ806x binaries.
 *
-* Developers should maintain the IPQ806x file on the flash device and be
+* Developers should maintain the IPQ806x files on the flash device and be
 * sure to back it up prior to overwriting it with a coreboot image.
 *******************************************************************************
 
